Initial commit: setup HTML, CSS, JS

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>User Registration Form</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<script src="script.js"></script>
 
 <body>
     <form id="registration-form">
